# GestTemps

./: .easignore  .env.app.example  .env.backup.example  .env.db.example  .env.example  .env.test.example  .gitattributes  .gitignore  .trivyignore  ABRPOINT.sln  ADDON_MODULES_FIXES_TODO.md  API_REFACTORING_GUIDE.md  CREATE_REFRESH_TOKENS_TABLE.sql  DOSSIER_AVOCAT.html  DOSSIER_TECHNIQUE.md  Dockerfile  Dockerfile.client  Dockerfile.server  Email_Reponse_Chiraz.txt  IMPLEMENTATION_COMPLETE.md  Maquette_Concorde_Workforce.html  Maquette_Concorde_Workforce_Dark.html  RAPPORT_AUDIT_SECURITE_2026-06-20.md  RAPPORT_AUDIT_SECURITE_PERFORMANCE.html  README.md  SECURE_TOKEN_NEXT_STEPS.md  SECURITY_AUDIT_MODULES.md  SECURITY_ISSUES.md  SECURITY_PERFORMANCE_AUDIT.md  SETUP_SECURE_TOKENS.md  SETUP_TESTS.md  build_output.txt  buildstatus.txt  docker-compose.app.yml  docker-compose.db.yml  docker-compose.dcproj  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  document.txt  (+10 more)
.github/: dependabot.yml
ABRPOINT.Server/: ABRPOINT.Server.csproj  ABRPOINT.Server.http  Dockerfile  Program.cs  (+3 more)
ABRPOINT.Server.Benchmarks/: ABRPOINT.Server.Benchmarks.csproj  CryptoBenchmarks.cs  PlanCatalogBenchmarks.cs  Program.cs
ABRPOINT.Server.Tests/: ABRPOINT.Server.Tests.csproj  README.md  xunit.runner.json
services/rag/: .dockerignore  Dockerfile  download_model.py  pyproject.toml
services/rag/app/: config.py  deps.py  main.py  models.py
services/rag/app/routers/: embed.py  health.py  ingest.py  retrieve.py
services/rag/app/services/: ingestion.py  retrieval.py
(+1617 files in other folders)
