[project]
name = "abrpoint-rag-svc"
version = "0.1.0"
description = "RAG sidecar for ABRPOINT GestTemps : ingestion, retrieval and embeddings via LangChain + Qdrant + multilingual-e5-large."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.0",
  "python-multipart==0.0.20",
  # LangChain core + community loaders + splitters + vectorstore wrapper
  "langchain==0.3.13",
  "langchain-community==0.3.13",
  "langchain-text-splitters==0.3.4",
  "langchain-qdrant==0.2.0",
  "langchain-huggingface==0.1.2",
  # Backends
  "qdrant-client==1.12.1",
  "sentence-transformers==5.5.1",
  # CPU-only Torch — passer a la variante GPU au build si besoin.
  # Pin compatible avec sentence-transformers 3.3.x (Torch >=1.11, <3.0).
  "torch==2.5.1",
  "pypdf==5.1.0",
  "docx2txt==0.8",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.25.0",
  "httpx==0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
